--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           float: left;
           width: 20%;
           padding: 10px;
-          height: 20px; /* Should be removed. Only for demonstration */
+          height: 20px;
         }
         
         .row:after {
